Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-448

axiom_xml_writer_create opened file can't be closed correctly

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.0.0
    • xml/om
    • None
    • linux simple_http_client

    Description

      xml_writer = axiom_xml_writer_create(env, filename, "UTF-8", 0, 0);
      om_output = axiom_output_create(env, xml_writer);
      AXIOM_XML_WRITER_WRITE_START_DOCUMENT(xml_writer, env);
      AXIOM_NODE_SERIALIZE(node, env, om_output);
      AXIOM_XML_WRITER_WRITE_END_DOCUMENT(xml_writer, env);

      //workaround so that the file is fully written and closed
      AXIOM_XML_WRITER_GET_XML(xml_writer, env);

      AXIOM_OUTPUT_FREE(om_output, env);

      I have to call AXIOM_XML_WRITER_GET_XML() so that the file is fully written and properly closed by
      the underlying xmlTextWriter..

      I think there is a function a la axiom_xml_writer_close() needed...

      Patch welcome?

      Thanks

      Marc

      Attachments

        Activity

          People

            samisa Don Samisa Abeysinghe
            gigerstyle Marc Giger
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: